Fix word wrap

--- a/greentext-generator/src/style.css
+++ b/greentext-generator/src/style.css
@@ -107,5 +107,5 @@ html, body {
     margin-left: 10px;
     margin-top: 0;
     margin-bottom: 0;
-    word-break: break-all;
+    word-break: normal;
 }
